add ojdbc14 dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,13 @@
         <lb.version>1.0.7</lb.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>mesir-repo</id>
+            <url>http://mesir.googlecode.com/svn/trunk/mavenrepo</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -72,6 +79,11 @@
             <!--<scope>runtime</scope>-->
         </dependency>
 
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc14</artifactId>
+            <version>10.2.0.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
