modify log setting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-file.path=C:\\work\\excelTester\\template\\Book1.xlsx
+file.path=C:\\git_work\\excelTester\\template\\Book1.xlsx
 #file.path=Book1.xlsx
 
 db.driver=oracle.jdbc.driver.OracleDriver
