--- a/pom.xml
+++ b/pom.xml
@@ -51,19 +51,19 @@
             <!--<scope>provided</scope>-->
         </dependency>
 
-        <dependency>
-            <groupId>de.huxhorn.lilith</groupId>
-            <artifactId>de.huxhorn.lilith.logback.appender.multiplex-classic</artifactId>
-            <version>0.9.40</version>
-            <scope>runtime</scope>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>de.huxhorn.lilith</groupId>-->
+            <!--<artifactId>de.huxhorn.lilith.logback.appender.multiplex-classic</artifactId>-->
+            <!--<version>0.9.40</version>-->
+            <!--<scope>runtime</scope>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>de.huxhorn.lilith</groupId>
-            <artifactId>de.huxhorn.lilith.logback.encoder.classic</artifactId>
-            <version>0.9.40</version>
-            <scope>runtime</scope>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>de.huxhorn.lilith</groupId>-->
+            <!--<artifactId>de.huxhorn.lilith.logback.encoder.classic</artifactId>-->
+            <!--<version>0.9.40</version>-->
+            <!--<scope>runtime</scope>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.apache.poi</groupId>
