--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 file.path=C:\\git_work\\excelTester\\template\\Book1.xlsx
 #file.path=Book1.xlsx
 
-db.driver=oracle.jdbc.driver.OracleDriver
+db.driver=oracle.jdbc.OracleDriver
 db.connection=jdbc:oracle:thin:@localhost:1522:XXXXXX
 db.user=user
 db.password=pass
