--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,8 @@
-db.driver=oracle.jdbc.OracleDriver
-db.connection=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-db.user=XXXXXXXXXXXXXXX
-db.password=XXXXXXXXXXXXXX
-
+#db.driver=oracle.jdbc.OracleDriver
+#db.connection=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+#db.user=XXXXXXXXXXXXXXX
+#db.password=XXXXXXXXXXXXXX
+db.driver=${db.driver}
+db.connection=${db.connection}
+db.user=${db.user}
+db.password=${db.password}
