--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,41 @@
         <lb.version>1.0.7</lb.version>
     </properties>
 
+    <profiles>
+        <profile>
+            <id>test</id>
+            <activation>
+                <os>
+                    <family>windows</family>    
+                </os>
+            </activation>
+            <properties>
+                <use.table.def.file>true</use.table.def.file>
+                <db.driver>oracle.jdbc.OracleDriver</db.driver>
+                <db.connection>KKKKKKKKKKKKK</db.connection>
+                <db.user>ORA</db.user>
+                <db.password>ORA</db.password>
+            </properties>
+        </profile>
+        <profile>
+            <id>dev</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <properties>
+                <use.table.def.file>false</use.table.def.file>
+                <db.driver>oracle.jdbc.OracleDriver</db.driver>
+                <db.connection>XXXXXXXXXXXX</db.connection>
+                <db.user>XXXXXXXXXXXXX</db.user>
+                <db.password>XXXXXXXXXXXX</db.password>
+            </properties>
+        </profile>
+    </profiles>
+    
+    
+    
     <repositories>
         <repository>
             <id>mesir-repo</id>
@@ -123,6 +158,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.2</version>
+                <executions>
+                    <execution>
+                        <id>default-jar</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
