--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,8 @@
             </activation>
             <properties>
                 <use.table.def.file>false</use.table.def.file>
-                <db.driver>oracle.jdbc.OracleDriver</db.driver>
-                <db.connection>XXXXXXXXXXXX</db.connection>
-                <db.user>XXXXXXXXXXXXX</db.user>
-                <db.password>XXXXXXXXXXXX</db.password>
+                <db.driver>org.sqlite.JDBC</db.driver>
+                <db.connection>jdbc:sqlite:///Users/nath/work/excelTester/dev.sqlite</db.connection>
             </properties>
         </profile>
     </profiles>
@@ -119,9 +117,22 @@
             <artifactId>ojdbc14</artifactId>
             <version>10.2.0.4.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.7.2</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
