--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,9 @@
                 <env>test</env>
                 <use.table.def.file>true</use.table.def.file>
                 <db.driver>oracle.jdbc.OracleDriver</db.driver>
-                <db.connection>jdbc:oracle:thin:@10.209.25.114:1522/devgdsdb</db.connection>
-                <db.user>GDSUKCRS_UTORA</db.user>
-                <db.password>GDSUKCRS_UTORA</db.password>
+                <db.connection>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</db.connection>
+                <db.user>XXXXXXXXXXXXXX</db.user>
+                <db.password>XXXXXXXXXXXXXX</db.password>
             </properties>
         </profile>
         <profile>
