--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,27 @@
                     <skipTests>true</skipTests>    
                 </configuration>
             </plugin>
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>    
+                <executions>
+                    <execution>
+                        <id>PackageCopies</id>
+                        <phase>package</phase>
+                        <configuration>
+                            <tasks>
+                                <delete>
+                                    <fileset dir="${project.build.directory}">
+                                        <include name="${project.artifactId}-${project.version}.jar" />   
+                                    </fileset>
+                                </delete>
+                            </tasks>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>    
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
