--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 env=${env}
 use.table.def.file=${use.table.def.file}
-table.def.file.path=c:\\git_work\\excelTester\\target\\\u30B0\u30ED\u30FC\u30D0\u30EB\u5171\u901A\u57FA\u76E4\u30C6\u30FC\u30D6\u30EB\u5B9A\u7FA9\u66F8_ver3.0.xlsx
+table.def.file.path=c:\\\u30B0\u30ED\u30FC\u30D0\u30EB\u5171\u901A\u57FA\u76E4\u30C6\u30FC\u30D6\u30EB\u5B9A\u7FA9\u66F8_ver3.0.xlsx
 table.def.sheet.name=\u30A8\u30F3\u30C6\u30A3\u30C6\u30A3-\u5C5E\u6027
 table.def.sheet.index.table.name=\u30C6\u30FC\u30D6\u30EB\u540D
 table.def.sheet.index.column.name=\u30AB\u30E9\u30E0\u540D
